--- a/appendix/cd/cd.tex
+++ b/appendix/cd/cd.tex
@@ -27,6 +27,7 @@
     	Die \gls{g:matlab}-Skripte die währende des Projekts verwendet wurden.
     	\begin{itemize}
 	    	\item \texttt{Check\_Rotation\_final.m}
+	    	\item \texttt{Check\_Translation\_final.m}
 	    	\item \texttt{Check\_Translation\_Rotation\_final.m}
 	    	\item \texttt{Dynamisch\_Statisch.m}
 	    	\item \texttt{Konzept\_Translation\_final.m}
