--- a/appendix/messung/messung.tex
+++ b/appendix/messung/messung.tex
@@ -12,43 +12,53 @@
 %
 % 0.0.01      Erstellung der Datei
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-\chapter{Messungen}\label{ch:messungen}\todo{Diagramm-Positionen}
+\chapter{Messungen}\label{ch:messungen}
 	In diesem Kapitel sind alle Messergebnisse die während des Projekts aufgeführt. Die Gliederung folgt dabei der Reihenfolge der Durchführung. 
     %
-    \section{Konzept}\label{s:anhang_konzept_messung}
-    	Messungen während der Konzeptphase.
+%    \section{Konzept}\label{s:anhang_konzept_messung}
+%    	Messungen während der Konzeptphase.
     	%
-    	\subsection{Translation}\label{ss:anhang_konzept_messung_translation}
-    		\subsubsection*{x-Position}
-    			\image{appendix/messung/image/mittel_5_X}{scale=0.6}{htbp}[x-Position Translation langsam][img:x_tran_langsam]
+    	\section{Translation}\label{ss:anhang_konzept_messung_translation}
+    		\subsection*{x-Position}
+    			\vspace{-5ex}
+    			\image{appendix/messung/image/mittel_5_X}{scale=0.6}{H}[x-Position Translation langsam][img:x_tran_langsam]
 				%
-				\image{appendix/messung/image/schnell_5_X}{scale=0.6}{htbp}[x-Position Translation schnell][img:x_tran_schnell]
-			\subsubsection*{y-Position}
-				\image{appendix/messung/image/mittel_5_Y}{scale=0.6}{htbp}[y-Position Translation langsam][img:y_tran_langsam]
+				\image{appendix/messung/image/schnell_5_X}{scale=0.6}{H}[x-Position Translation schnell][img:x_tran_schnell]
+			\subsection*{y-Position}
+				\vspace{-5ex}
+				\image{appendix/messung/image/mittel_5_Y}{scale=0.6}{H}[y-Position Translation langsam][img:y_tran_langsam]
 				%
-				\image{appendix/messung/image/schnell_5_Y}{scale=0.6}{htbp}[y-Position Translation schnell][img:y_tran_schnell]
-			\subsubsection*{z-Position}
-				\image{appendix/messung/image/mittel_5_Z}{scale=0.6}{htbp}[z-Position Translation langsam][img:z_tran_langsam]
+				\vspace{-5ex}
+				\image{appendix/messung/image/schnell_5_Y}{scale=0.6}{H}[y-Position Translation schnell][img:y_tran_schnell]
+			\subsection*{z-Position}
+				\vspace{-5ex}
+				\image{appendix/messung/image/mittel_5_Z}{scale=0.6}{H}[z-Position Translation langsam][img:z_tran_langsam]
 				%
-				\image{appendix/messung/image/schnell_5_Z}{scale=0.6}{htbp}[z-Position Translation schnell][img:z_tran_schnell]
+				\vspace{-5ex}
+				\image{appendix/messung/image/schnell_5_Z}{scale=0.6}{H}[z-Position Translation schnell][img:z_tran_schnell]
 		%
-		\subsection{Translation und Rotation}\label{ss:anhang_konzept_messung_translation_rotation}
+		\section{Translation und Rotation}\label{ss:anhang_konzept_messung_translation_rotation}
 			%
-			\subsubsection*{Auslenkung 1}
-				\image{appendix/messung/image/auslenkung_1}{scale=0.6}{htbp}[Auslenkung 1][img:auslenkung_1]
+			\subsection*{Auslenkung 1}
+				\vspace{-5ex}
+				\image{appendix/messung/image/auslenkung_1}{scale=0.6}{H}[Auslenkung 1][img:auslenkung_1]
 			%
-			\subsubsection*{Auslenkung 1}
-				\image{appendix/messung/image/auslenkung_2}{scale=0.6}{htbp}[Auslenkung 2][img:auslenkung_2]
-			%			
-			\subsubsection*{Auslenkung 1}
-				\image{appendix/messung/image/auslenkung_3}{scale=0.6}{htbp}[Auslenkung 3 langsam][img:auslenkung_2]
+			\vspace{-7ex}
+			\subsection*{Auslenkung 2}
+				\vspace{-5ex}
+				\image{appendix/messung/image/auslenkung_2}{scale=0.6}{H}[Auslenkung 2][img:auslenkung_2]
+			%		
+			\vspace{-7ex}	
+			\subsection*{Auslenkung 3}
+				\vspace{-5ex}
+				\image{appendix/messung/image/auslenkung_3}{scale=0.6}{H}[Auslenkung 3 langsam][img:auslenkung_2]
 		
-		\subsection{Messung Drift}\label{ss:anhang_drift}
+		\section{Messung Drift}\label{ss:anhang_drift}
 		%
-		Messung des Driftes, dabei wurde die Bewegungsdetektion ausgeschaltet und das \gls{g:myrio} für \unit[10]{s} in Ruhe auf dem Tisch in der z-Achsen Position wie in Abschnitt \vref{s:verifikation_translation} beschrieben platziert.
+		Messung des Driftes. Dabei wurde die Bewegungsdetektion ausgeschaltet und das \gls{g:myrio} für \unit[10]{s} in Ruhe auf dem Tisch in der z-Achsen Position, wie in Abschnitt \vref{s:verifikation_translation} beschrieben, platziert.
 		%
 		\image{appendix/messung/image/Drift}{scale=0.6}{htbp}[Drift auf der x- und y-Achse während 10 s][img:drift]		
     	
     %
-    \section{Implementation}\label{s:anhang_implementation_messung}
+    %\section{Implementation}\label{s:anhang_implementation_messung}
   
