--- a/bibliography.bib
+++ b/bibliography.bib
@@ -309,7 +309,7 @@
 }
 
 @ONLINE{lit:labview_graph_as_chart,
-  url = {http://digital.ni.com/public.nsf/allkb/18B56D8556D44BF18625753D006EFF7C},
+  url = {http://digital.ni.com/public.nsf/allkb/},
   title = {How Do I Make an XY Graph Behave as an XY Chart?},
   author = {National Instruments},
   urldate = {2014-06-25},
