--- a/glossary.tex
+++ b/glossary.tex
@@ -53,7 +53,7 @@
 \newglossaryentry{g:webdav}{name=WebDAV, description={Steht für Web-based Distributed Authoring and Versioning und stellt ein offener Standard für den Datentransfer im Internet dar}}
 %
 % MATLAB
-\newglossaryentry{g:matlab}{name=MATLAB, description={Software von \href{http://www.mathworks.ch/}{The MathWorks} speziel ausgelegt zum Lösen mathematischer Problemstellungen}}
+\newglossaryentry{g:matlab}{name=MATLAB, description={Software von The MathWorks speziell ausgelegt zum Lösen mathematischer Problemstellungen}}
 %
 % stationäres Signal
 \newglossaryentry{g:stationaer}{name=stationär, description={Ein Signal wird als stationär bezeichnet, wenn seine Signalkenngrössen nicht abhängig von der Zeit sind}}
