--- a/acronyms.tex
+++ b/acronyms.tex
@@ -18,7 +18,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newacronym{ac:bsp}{BSP}{Beispiel}
 \newacronym{ac:MEMS}{MEMS}{Microelectromechanical Systems}
-\newacronym{ac:EHSM}{EHSM}{Eidgenössische Hochschule für Sport Magglingen}
+\newacronym{ac:EHSM}{EHSM}{Eidgenössischen Hochschule für Sport Magglingen}
 \newacronym{ac:daq}{DAQ}{Data Acquisition}
 \newacronym{ac:ap}{AP}{Arbeitspakete}
 \newacronym{ac:icp}{ICP}{integrated circuit piezoelectric}
