--- a/glossary.tex
+++ b/glossary.tex
@@ -20,7 +20,7 @@
 \newglossaryentry{g:beispiel}{name=Beispiel, description={Ein Beispiel}}
 %
 % Triangulation
-\newglossaryentry{g:triangulation}{name=Triangulation, description= {Positionsbestimmung im Raum mittels Richtungs- und Abstandsmessung. Berechnung der Position erfolgt anschliessend mit geometrischen Funktionen.}}
+\newglossaryentry{g:triangulation}{name=Triangulation, description= {Positionsbestimmung im Raum mittels Richtungs- und Abstandsmessung. Berechnung der Position erfolgt anschliessend mit geometrischen Funktionen}}
 %
 % Magnetometer
 \newglossaryentry{g:magnetometer}{name=Magnetometer, description={Sensor zum Messen von magnetischen Flussdichten}}
