--- a/report.tex
+++ b/report.tex
@@ -21,8 +21,8 @@
 %Dokumentangaben
 \newcommand{\Titel}{Bachelorthesis}
 \newcommand{\Uebertitel}{Smart Rehabilitation bei Kreuzbandrissen}
-\newcommand{\AutorA}{Reto Zurschmiede}
-\newcommand{\AutorB}{Simon Grossenbacher}
+\newcommand{\AutorA}{Simon Grossenbacher}
+\newcommand{\AutorB}{Reto Zurschmiede}
 \newcommand{\DozentA}{Rolf Vetter}
 \newcommand{\DozentB}{Ivo Oesch}
 \newcommand{\ExpertA}{Dominique Renevey}
