--- a/content/1_einleitung/einleitung.tex
+++ b/content/1_einleitung/einleitung.tex
@@ -13,33 +13,33 @@
 % 0.0.0       Erstellung der Datei
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Einleitung}\label{ch:einleitung}
-Für die Öffentlichkeit wurde das Motion-Tracking-Verfahren vor allem durch die Filmindustrie bekannt. Grosse Erfolge erreichte der Film Avatar - Aufbruch nach Pandora. In diesem Film wird mit einem optischen Motion-Tracking-Verfahren den Figuren Leben eingehaucht. Diese bewegen sich im Vergleich zu früheren Animationen sehr authentisch. Speziell ist, dass durch das zusätzliche Tracken des Gesichts auch Emotionen der Schauspieler auf die Figuren übertragen werden und somit nicht nur die Bewegungen der Schauspieler. Der Film gilt zurzeit als einer der erfolgreichsten überhaupt. Durch die aufwändige Technik, welche teilweise speziell für Avatar entwickelt wurde, entstanden jedoch auch sehr hohe Produktionskosten.\par
+Für die Öffentlichkeit wurde das Motion-Tracking-Verfahren vor allem durch die Filmindustrie bekannt. Grosse Erfolge erreichte der Film Avatar - Aufbruch nach Pandora. In diesem Film wird mit einem optischen Motion-Tracking-Verfahren den Figuren Leben eingehaucht. Diese bewegen sich im Vergleich zu früheren Animationen sehr authentisch. Speziell ist, dass durch das zusätzliche Tracken des Gesichts auch Emotionen der Schauspieler auf die Figuren übertragen werden und somit nicht nur die Bewegungen der Schauspieler. Der Film gilt zurzeit als einer der erfolgreichsten überhaupt. Durch die aufwendige Technik, welche teilweise speziell für Avatar entwickelt wurde, entstanden jedoch auch sehr hohe Produktionskosten.\par
 %
-Bewegungensanalysen waren früher nur mit optischen Verfahren in speziellen Einrichtungen möglich. Eine Methode ist ein optisches Verfolgen von Markern. Die Marker sind dabei auf dem Testobjekt an für die Rekonstruktion des Bewegungsablaufes relevanten Stellen angebracht. Beispielsweise zum Beobachten der Beine eines Läufers an Hüfte, Knie und Knöchel. Die Marker sind somit an den beweglichen Gelenken befestigt. Der Bewegungsablauf wird von mehreren Kameras aus verschiedenen Perspektiven gefilmt. Mit Bildverarbeitung und \gls{g:triangulation} kann anschliessend auf die Position des Markers im Raum geschlossen werden. Aus den Markern kann ein entsprechendes Modell des Beines erstellt werden. Untersuchungen und Messungen von Bewegungsabläufen auf diese Art sind wie schon genannt nur in speziell dafür ausgelegten Laboren durchführbar. Durch diese Labore sind die Messungen zum einen ortsgebunden und zum andern durch die aufwändigen und teuren Kamerasysteme kostspielig. Eine Lösung mit günstigen und komfortablen Analysegeräten ist gefragt womit auch Messungen im täglichen Umfeld durchführbar sind.\par
+Bewegungensanalysen waren früher nur mit optischen Verfahren in speziellen Einrichtungen möglich. Eine Methode ist ein optisches Verfolgen von Markern. Die Marker sind dabei auf dem Testobjekt an für die Rekonstruktion des Bewegungsablaufes relevanten Stellen angebracht. Beispielsweise zum Beobachten der Beine eines Läufers an Hüfte, Knie und Knöchel. Die Marker sind somit an den beweglichen Gelenken befestigt. Der Bewegungsablauf wird von mehreren Kameras aus verschiedenen Perspektiven gefilmt. Mit Bildverarbeitung und \gls{g:triangulation} kann anschliessend auf die Position des Markers im Raum geschlossen werden. Aus den Markern kann ein entsprechendes Modell des Beines erstellt werden. Untersuchungen und Messungen von Bewegungsabläufen auf diese Art sind, wie schon genannt, nur in speziell dafür ausgelegten Labors durchführbar. Deswegen sind die Messungen zum einen ortsgebunden und zum andern wegen der aufwendig und teuren Kamerasysteme kostspielig. Eine Lösung mit günstigen und komfortablen Analysegeräten ist gefragt, damit auch Messungen im täglichen Umfeld durchführbar sind.\par
 %
-Dank der \acrshort{ac:MEMS}-Technologie ist in den letzten Jahren eine zunehmenden Miniaturisierung von Bewegungssensoren wie Beschleunigungssensoren oder \gls{g:gyroskop}en erfolgt. Eine Bewegung kann auch mithilfe eines Beschleunigungssensor gemessen werden. Dieser misst jedoch nicht die absolute Position, sondern muss basierend auf Integration der Beschleunigungsdaten den zurückgelegten Weg ermitteln. Dazu muss die Startposition und Orientierung des Sensors bekannt sein. Somit ist die Realisierung von kompakten und für den Träger komfortablen Geräten möglich. Die Durchführung der Messungen ist nicht mehr örtlich an ein Labor gebunden.\par
+Dank der \acrshort{ac:MEMS}-Technologie ist in den letzten Jahren eine zunehmenden Miniaturisierung von Bewegungssensoren wie Beschleunigungssensoren oder \gls{g:gyroskop}en erfolgt. Eine Bewegung kann auch mithilfe eines Beschleunigungssensors gemessen werden. Dieser misst jedoch nicht die absolute Position, sondern muss, basierend auf der Integration der Beschleunigungsdaten, den zurückgelegten Weg ermitteln. Dazu muss Startposition und Orientierung des Sensors bekannt sein. Somit ist die Realisierung von kompakten und für den Träger komfortablen Geräten möglich. Die Durchführung der Messungen ist nicht mehr örtlich an ein Labor gebunden.\par
 %
-Ein Problem bei diesem Verfahren mit den Beschleunigungssensoren ist die Genauigkeit der Messung. Bereits eine kleine Abweichung in der Messung der Beschleunigung resultiert in einem grossen Fehler in der Endposition. Hinzu kommt, dass der Sensor prinzipbedingt Messfehler aufweist. Somit sind nur Messungen mit anschliessender Berechnung der Position von kurzer Dauer (einigen Sekunden) zu realisieren. Auch ist die Platzierung und Befestigung des Sensors eine schwere Aufgabe. Durch die Masse des Sensors schwingt der Sensor zusätzlich bei jeder Bewegung mit und verfälscht somit die Messung.\par		
+Ein Problem bei diesem Verfahren mit den Beschleunigungssensoren ist die Genauigkeit der Messung. Bereits eine kleine Abweichung in der Messung der Beschleunigung bewirkt einen grossen Fehler in der Endposition. Hinzu kommt, dass der Sensor systembedingt Messfehler aufweist. Somit sind nur Messungen von kurzer Dauer (einigen Sekunden) mit anschliessender Berechnung der Position zu realisieren. Auch ist die Platzierung und Befestigung des Sensors eine schwierige Aufgabe. Durch seine Masse schwingt der Sensor zusätzlich bei jeder Bewegung mit und verfälscht somit das Resultat der Messung.\par		
 %
 \section{Zweck, Ziel, Intention und Notwendigkeit der Untersuchung}\label{sec:zweck}
-Der Zeitpunkt des Wiedereinstieges in das Training für einen Sportler mit Kreuzbandriss ist schwer zu bestimmen. Zum einen will der Sportler schnellstmöglich mit dem Training weiterfahren um den Trainingsrückstand aufzuholen und den getätigten Aufbau nicht weiter zu verlieren. Zum andern sollte jedoch die Verletzung bestmöglich geheilt sein um Folgeschäden und weitere Trainingsrückschläge zu vermeiden.\par 
+Der Zeitpunkt des Wiedereinstiegs in das Training für einen Sportler mit Kreuzbandriss ist schwer zu bestimmen. Zum einen will der Sportler schnellstmöglich mit dem Training weiterfahren, um den Trainingsrückstand aufzuholen und den bisherigen Trainingsstand nicht weiter zu verlieren.\todo{überarbeiten} Zum andern sollte jedoch die Verletzung bestmöglich geheilt sein, um Folgeschäden und weitere Trainingsrückschläge zu vermeiden.\par 
 %
-An der \gls{ac:EHSM} wird dazu ein Test geleitet durch einen Physiotherapeuten am verletzen Sportler durchgeführt. Der Test dient zum Ermitteln des Genesungszustandes des Sportlers. Bei diesem Test werden an der \gls{ac:EHSM} mehrere Übungen mit unterschiedlichen Belastungen des Knies durchgeführt. Eine Kamera filmt den Sportler zusätzlich während den Übungen. Die Auslenkung des Knies in der \gls{g:transversalebene} des Körpers lässt auf den Genesungszustand nach einem Kreuzbandriss schliessen. Auch ist ersichtlich ob der Sportler eine Schonhaltung einnimmt. Mithilfe der Aufnahme wertet der Therapeut diese Auslenkung aus und bestimmt die weiteren Trainingsmöglichkeiten. Er entschiedet ob der Sportler das Training wieder aufnehmen darf oder noch pausieren muss.\par
+An der Eidgenössischen Hochschule für Sport Magglingen (EHSM) wird dazu unter der Leitung eines Physiotherapeuten ein Test am verletzen Sportler durchgeführt. Der Test dient zum Ermitteln des Genesungszustandes des Sportlers. Bei diesem Test werden an der \acrshort{ac:EHSM} mehrere Übungen mit unterschiedlichen Belastungen des Knies durchgeführt. Eine Kamera filmt den Sportler zusätzlich während der Übungen. Die Auslenkung des Knies in der \gls{g:transversalebene} des Körpers lässt auf den Genesungszustand nach einem Kreuzbandriss schliessen. Auch ist ersichtlich, ob der Sportler eine Schonhaltung einnimmt. Mithilfe der Aufnahme wertet der Therapeut diese Auslenkung aus und bestimmt die weiteren Trainingsmöglichkeiten. Er entscheidet, ob der Sportler das Training wieder aufnehmen darf oder ob er noch pausieren muss.\par
 %
-Dieser Test mit anschliessender Auswertung der Kameraaufnahmen ist durch seine Subjektivität nicht die bestmögliche Lösung. Die Auslenkung des Knies ist schwer zu bestimmen und kann nur geschätzt werden. Eine falsche Auswertung hat bei zu frühem Trainingseinstieg Folgen auf die Gesundheit des Athleten, bei zu spätem Wiedereinstieg geht dem Sportler wichtige Zeit verloren. Den Therapeuten würde eine zusätzliche Angabe der absolute Auslenkung helfen, um eine bessere Entscheidung treffen zu können.
+Dieser Test mit anschliessender Auswertung der Kameraaufnahmen ist durch seine Subjektivität nicht die bestmögliche Lösung. Die Auslenkung des Knies ist schwer zu bestimmen und kann nur geschätzt werden. Eine falsche Auswertung hat bei zu frühem Trainingseinstieg Folgen auf die Gesundheit des Athleten, bei zu spätem Wiedereinstieg geht dem Sportler wichtige Zeit verloren. Den Therapeuten würde eine zusätzliche Angabe der absoluten Auslenkung helfen, um eine angemessene Entscheidung treffen zu können.
 %
 \section{Stand der Wissenschaft}
-Auf dem Gebiet der Biomechanik werden viele Forschungen zur Untersuchung eine Bewegungsablaufes mit Beschleunigungssensoren getätigt. Die Motivation ist in den meisten Arbeiten dieselbe. Das Messen von Bewegungsabläufen wurde bisher mit Kameras in speziell dafür vorgesehenen Laboren vorgenommen. Bewegungsabläufe in einem anderen Umfeld sind mit dieser Methode nicht möglich zu bestimmen. Viele Forschungen wollen aus diesem Grund kompakte Geräte mit einer günstigeren und komfortableren Lösung entwickeln.\par
+Auf dem Gebiet der Biomechanik wird viel Forschung mit Beschleunigungssensoren betrieben zur Untersuchung eines Bewegungsablaufes. Die Motivation ist in den meisten Arbeiten dieselbe. Das Messen von Bewegungsabläufen wurde bisher mit Kameras in speziell dafür vorgesehenen Labors vorgenommen. Bewegungsabläufe in einem anderen Umfeld zu bestimmen, ist mit dieser Methode nicht möglich. Aus diesem Grund haben viele Projekte zum Ziel kompakte Geräte zu entwickeln, die sowohl kostengünstig als auch komfortabel im Einsatz sind.\par
 %
-Eine Arbeit der Universität Kochi in Japan beinhaltet das Entwickeln eines ambulanten Systems zum Schätzen der Haltung der unteren Gliedmassen unter normalen Lebensbedingungen. Der Sensor sollte den Probanden während den Aufzeichnungen nicht stören, damit sich dieser frei bewegen kann. Als Sensoren werden zuerst nur Beschleunigungssensoren verwendet. Mit diesem Aufbau konnten die Rotationswinkel bestimmt werden. In einem weiteren Versuch wurden zusätzlich \gls{g:gyroskop}e verwendet um die Winkel des Knie- und Hüftgelenkes zu bestimmen. In der finalen Version wurden die \gls{g:gyroskop}e durch \gls{g:magnetometer} ersetzt. Somit wird beispielsweise der Fehler, der durch den Drift eines \gls{g:gyroskop}es entsteht, ausgeschlossen. Zum Schätzen der Position und der Orientierung wird ein selbst entwickelter Sensor-Differenz-Algorithmus verwendet. Am Probanden werden somit mehrere Sensoren angebracht \cite{lit:kochi}.\par
+Eine Arbeit der Universität Kochi in Japan beinhaltet das Entwickeln eines ambulanten Systems zum Schätzen der Haltung der unteren Gliedmassen unter normalen Lebensbedingungen. Der Sensor soll den Probanden während der Aufzeichnungen nicht stören, damit sich dieser frei bewegen kann. Es werden zuerst auschliesslich Beschleunigungssensoren verwendet. Mit diesem Aufbau können die Rotationswinkel bestimmt werden. In einem weiteren Versuch werden \gls{g:gyroskop}e verwendet, um die Winkel des Knie- und Hüftgelenkes zu bestimmen. In der finalen Version werden die \gls{g:gyroskop}e durch \gls{g:magnetometer} ersetzt. Somit wird der Fehler, der durch den Drift des \gls{g:gyroskop}s entsteht, ausgeschlossen. Zum Schätzen der Position und der Orientierung wird ein selbst entwickelter Sensor-Differenz-Algorithmus verwendet. Am Probanden werden also mehrere Sensoren angebracht \cite{lit:kochi}.\par
 %
-Eine weitere Arbeit im Bereich Human Engineering der Universität Hakkaido in Japan verwendet einen Beschleunigungssensor sowie ein \gls{g:gyroskop}. Diese Sensorpakete werden jeweils auf dem Oberschenkel sowie dem Schienbein angebracht. Es wurden bewusst keine \gls{g:magnetometer} verwendet, da diese in einer Wohnumgebung zu ungenaue Resultate erzielen. Mit den Sensoren kann die Bewegungsbeschleunigung von der Erdbeschleunigung getrennt werden. Zusätzlich ist die Höhe sowie der Abstand zwischen den Hüften, die Distanz zwischen Hüfte und Knie sowie Knie und Knöchel bekannt. Mit den Sensoren werden die Winkel der Gelenke bestimmt, womit wiederum durch die bekannten Abständen der einzelnen Gelenke deren Position im Raum berechnet werden kann. Zur Kreuzvalidierung wurden die geschätzten Bewegungen mit einem Kamera Bewegungs-Erfassungs-System überprüft. Hierbei wurden beachtliche Übereinstimmungen mit einem Korrelationskoeffizienten von 0.924 für die Bewegung am Knie erreicht \cite{lit:hokkaido}.
+Eine weitere Arbeit im Bereich Human Engineering der Universität Hakkaido in Japan verwendet einen Beschleunigungssensor sowie ein \gls{g:gyroskop}. Diese Sensorpakete werden jeweils auf dem Oberschenkel sowie dem Schienbein befestigt. Es werden bewusst keine \gls{g:magnetometer} verwendet, da diese in einer Wohnumgebung zu ungenaue Resultate erzielen. Mit den Sensoren kann die Bewegungsbeschleunigung von der Erdbeschleunigung getrennt werden. Zusätzlich ist die Höhe sowie der Abstand zwischen den Hüften, die Distanz zwischen Hüfte und Knie sowie Knie und Knöchel bekannt. Mit den Sensoren werden die Winkel der Gelenke bestimmt, womit wiederum durch die bekannten Abständen der einzelnen Gelenke deren Position im Raum berechnet werden kann. Zur Kreuzvalidierung werden die geschätzten Bewegungen mit einem Kamera-Bewegungs-Erfassungs-System überprüft. Hierbei wurden beachtliche Übereinstimmungen mit einem Korrelationskoeffizienten von 0.924 für die Bewegung am Knie erreicht \cite{lit:hokkaido}.
 
-In einer Arbeit verfasst von der Technischen Universität in Schweden resultiert eine Methode, welche die Orientierung sowie die Position eines Beschleunigungssensors montiert auf einem Industrie-Roboter-Arm bestimmt. Die Orientierung wird zuerst in einem statischen Test bestimmt. Hierzu wird der Roboter-Arm auf bekannte Positionen mit unterschiedlichen Orientierungen gefahren. An diesen Positionen wird vom Sensor die vorliegende Erdbeschleunigung gemessen. Mit den bekannten und gemessenen Werten kann die Rotationsmatrix bestimmt werden und somit die Orientierung des Beschleunigungssensors mittels Transformation in das Bezugskoordinatensystem (\gls{g:worldframe}) kompensiert werden. In einem zweiten Schritt wird die Position des Sensors in einem dynamischen Verfahren bestimmt. Dazu fährt der Roboterarm einen bekannten Weg mit konstanter Winkelgeschwindigkeit ab \cite{lit:roboarm1}. In einer weiterführenden Arbeit aufbauend auf der erstgenannten wird die Methode mit einem Industriepartner optimiert. Dabei werden die aufgezeichneten Daten des Beschleunigungssensor auf verschiedene Weisen mit Filterung aufbereitet um den Fehler zu minimieren \cite{lit:roboarm2}.\par
+In einer Arbeit, verfasst an der Universität Linköping (Departement Elektrotechnik) resultiert eine Methode, welche Orientierung und Position eines Beschleunigungssensors bestimmt. Dieser Sensor ist auf einem Industrie-Roboter-Arm montiert. Die Orientierung wird zuerst in einem statischen Test bestimmt. Hierzu wird der Roboter-Arm auf bekannte Positionen mit unterschiedlichen Orientierungen gefahren. An diesen Positionen wird vom Sensor die vorliegende Erdbeschleunigung gemessen. Mit den bekannten und gemessenen Werten kann die Rotationsmatrix bestimmt werden und somit die Orientierung des Beschleunigungssensors mittels Transformation in das Bezugskoordinatensystem (\gls{g:worldframe}) kompensiert werden. In einem zweiten Schritt wird die Position des Sensors in einem dynamischen Verfahren bestimmt. Dazu fährt der Roboterarm einen bekannten Weg mit konstanter Winkelgeschwindigkeit ab \cite{lit:roboarm1}. In einer weiterführenden Arbeit, aufbauend auf der erstgenannten, wird die Methode mit einem Industriepartner optimiert. Dabei werden die aufgezeichneten Daten des Beschleunigungssensors auf verschiedene Weisen mit Filterung aufbereitet, um den Fehler zu minimieren \cite{lit:roboarm2}.\par
 %
-In der letzten betrachteten Arbeit der Universität Coimbra in Portugal wurde das Verfolgen eines Bewegungsablauf mittels Beschleunigungssensor, \gls{g:gyroskop} und \gls{g:magnetometer} realisiert. Dabei wird zuerst die Ausrichtung des Sensors zum Bezugssystem bestimmt und mittels Rotationsmatrix in das gewünschte Bezugssystem transformiert. Dann werden die gemessenen Beschleunigungen von der Beschleunigung des Erdfeldes separiert und anschliessend durch doppelte Integration auf den zurückgelegten Weg geschlossen. Da durch den Drift des \gls{g:gyroskop}es die Messung nach wenigen Sekunden schon stark verfälscht ist, wurde eine zusätzliche Bewegungsdetektion vorgenommen. Die Integration der Beschleunigung erfolgt somit nur wenn sich das Testobjekt bewegt. Die Bewegung wird mit einem Threshold aus der berechneten Varianz des Beschleunigungssensors (abzüglich der Erdbeschleunigung) detektiert. Zusätzlich wird dem Drift des \gls{g:gyroskop}es mit einer Kompensation entgegengewirkt. Mit dieser Methode erreichten sie eine Genauigkeit von 2 cm auf eine Distanz von 50 cm \cite{lit:doubleint}.
+In der letzten betrachteten Arbeit der Universität Coimbra in Portugal wird das Verfolgen eines Bewegungsablauf mittels Beschleunigungssensors, \gls{g:gyroskop}s und \gls{g:magnetometer}s realisiert. Dabei wird zuerst die Ausrichtung des Sensors zum Bezugssystem bestimmt und mittels Rotationsmatrix in das gewünschte Bezugssystem transformiert. Dann werden die gemessenen Beschleunigungen von der Beschleunigung des Erdfeldes separiert und anschliessend durch doppelte Integration auf den zurückgelegten Weg geschlossen. Da durch den Drift des \gls{g:gyroskop}s die Messung nach wenigen Sekunden schon stark verfälscht ist, wird eine zusätzliche Bewegungsdetektion vorgenommen. Die Integration der Beschleunigung erfolgt somit nur, wenn sich das Testobjekt bewegt. Die Bewegung wird mit einem Threshold aus der berechneten Varianz des Beschleunigungssensors (abzüglich der Erdbeschleunigung) detektiert. Zusätzlich wird dem Drift des \gls{g:gyroskop}s mit einer Kompensation entgegengewirkt. Mit dieser Methode erreichen sie eine Genauigkeit von \unit[2.0]{cm} auf eine Distanz von \unit[50.0]{cm} \cite{lit:doubleint}.
 %
-\section{Aufgabenstellung}\label{s:aufgabenstellung} \todo{Check Referenz}
+\section{Aufgabenstellung}\label{s:aufgabenstellung} 
 	Die Aufgabenstellung wurde wie folgt durch die Betreuer und die Autoren definiert. Die Arbeit dauert 5 Wochen, wobei die Projektstudie eingerechnet ist. Für den genauen Wortlaut sei auf den Anhang \vref{ch:aufgabenstellung} verwiesen.\par
 	%
 %	Während der Karriere eines Sportlers treten oft Verletzungen auf, die eine längere Trainingsabsolvents zur Folge haben können. In dieser Phase ist es wichtig den richtigen Zeitpunkt für den Wiedereinstieg zu finden, da sonst entweder wertvolle Zeit des Aufbaus verloren geht, oder die Verletzung wieder aufbrechen kann. Bisweilen wurde diese Beurteilung durch die subjektive Wahrnehmung eines Physiotherapeuten durchgeführt und hatte keine messtechnische Grundlagen. Im Zuge eines Forschungsprojekts soll nun eine Methodik entwickelt werden damit ein Therapeut eine Basis für eine begründete Diagnose hat.\par
@@ -50,9 +50,9 @@ In der letzten betrachteten Arbeit der Universität Coimbra in Portugal wurde das
 		\item Extraktion aller relevanten Daten für die Weiterverarbeitung
 		\item Entwicklung eines Demonstrators mit \gls{g:labview}
 		\item Ausarbeitung experimenteller Protokolle zur Validierung der Messmethodik 
-		\item Bereitstellung eines kontrollierten Messfeldes.
+		\item Bereitstellung eines kontrollierten Messfeldes
 	\end{itemize} 
-	Zur Verfügung stehen eine Datenkarte (\gls{g:myrio}) von \gls{ac:ni}, die einen 3-Achsen Beschleunigungssensor integriert hat. Die Testumgebung muss durch die Autoren gestellt werden. 
+	Zur Verfügung stehen eine Datenkarte (\gls{g:myrio}) von \gls{ac:ni}, die einen 3-Achsen-Beschleunigungssensor integriert hat. Die Testumgebung muss durch die Autoren gestellt werden. 
 %
 \subsection{Ablauf und Gliederung des Projekts}\label{ss:ablauf_gliederung_projekt}
 	Das Projekt wird in insgesamt vier Phasen gegliedert. Jede Phase beinhaltet dabei mehrere \gls{ac:ap}, die durch die beiden Autoren abgearbeitet werden. Dabei werden Arbeiten gemeinsam und getrennt durchgeführt. Dieses Vorgehen steigert die Effizienz und garantiert gleichzeitig eine gewisse Redundanz im Arbeitsprozess. Der detaillierte Ablauf ist der Abbildung \vref{img:projekablauf} zu entnehmen. Dabei sind die linken \gls{ac:ap} Simon Grossenbacher und die rechten Reto Zurschmiede zuzuordnen.
@@ -63,11 +63,11 @@ In der letzten betrachteten Arbeit der Universität Coimbra in Portugal wurde das
 	Die bereits erwähnten Phasen umfassen die Punkte Literaturstudie, Konzept, Implemen\-tierung und Validierung.
 	%
 	\begin{description}
-		\item[Literaturstudie] Die erste Phase umfasst das Einarbeiten in die Thematik. Dafür dienen spezifische Papers als Grundlage, auf der anschliessend aufgebaut werden kann. Ein Hauptaugenmerk wird auf das Bedienen der Toolchains gelegt (referenziert durch die \gls{ac:ap} \textsf{Einarbeitung \gls{g:labview}} und \textsf{Einarbeitung DAQ in \gls{g:matlab}}). Durch dies werden vorhandene Probleme früh erkannt und beeinflussen die späteren Phasen nicht negativ.
+		\item[Literaturstudie] Die erste Phase umfasst das Einarbeiten in die Thematik. Dafür dienen spezifische Papers als Grundlage, auf der anschliessend aufgebaut werden kann. Ein Hauptaugenmerk wird auf das Bedienen der Toolchains gelegt (referenziert durch die \gls{ac:ap} \textsf{Einarbeitung \gls{g:labview}} und \textsf{Einarbeitung DAQ in \gls{g:matlab}}). Dadurch werden vorhandene Probleme frühzeitig erkannt und somit werden spätere Phasen nicht negativ beeinflusst.
 		%
-		\item[Konzept] Ein grosser Teil des Projekts beansprucht die Konzept-Phase für sich. Sie hat zum Ziel einen entsprechenden Algorithmus zu entwickeln und anschliessend zu Validieren (\gls{ac:ap} \textsf{Algorithmus-Entwicklung} und \textsf{Validierung Konzept}). Parallel dazu wird ein Experimental-Protokoll ausgearbeitet und ein \gls{g:labview}-Basis-Projekt aufgesetzt (\gls{ac:ap} \textsf{Experimental-Protokoll ausarbeiten} und \textsf{Basis-Projekt \gls{g:labview} ergänzen}).
+		\item[Konzept] Ein grosser Teil des Projekts beansprucht die Konzept-Phase für sich. Sie hat zum Ziel, einen entsprechenden Algorithmus zu entwickeln und anschliessend zu validieren (\gls{ac:ap} \textsf{Algorithmus-Entwicklung} und \textsf{Validierung Konzept}). Parallel dazu wird ein Experimental-Protokoll ausgearbeitet und ein \gls{g:labview}-Basis-Projekt aufgesetzt (\gls{ac:ap} \textsf{Experimental-Protokoll ausarbeiten} und \textsf{Basis-Projekt \gls{g:labview} ergänzen}).
 		%
-		\item[Implementierung] In der zweiten Hauptphase wird im \gls{ac:ap} \textsf{Portierung \gls{g:matlab} nach \gls{g:labview}} der erstellte \gls{g:matlab} Algorithmus nach \gls{g:labview} portiert. Dabei ist das Ziel die gleiche Funktionalität wie das Konzept zu erreichen. Anschliessend erfolgt ein Vergleich mit dem Konzept (\gls{ac:ap} \textsf{Kreuzvalidierung Konzept-Implementation}\todo{Kreuzvalidierung weg}). Parallel dazu wird das bestehende \gls{g:labview}-Projekt zu einem Demonstrator für die Präsentation erweitert (\gls{ac:ap} \textsf{Demonstrator}).
+		\item[Implementierung] In der zweiten Hauptphase wird im \gls{ac:ap} \textsf{Portierung \gls{g:matlab} nach \gls{g:labview}} der erstellte \gls{g:matlab}-Algorithmus nach \gls{g:labview} portiert. Ziel ist, die gleiche Funktionalität wie im Konzept zu erreichen. Anschliessend erfolgt ein Vergleich mit dem Konzept (\gls{ac:ap} \textsf{Kreuzvalidierung Konzept-Implementation}\todo{Kreuzvalidierung weg}). Parallel dazu wird das bestehende \gls{g:labview}-Projekt zu einem Demonstrator für die Präsentation erweitert (\gls{ac:ap} \textsf{Demonstrator}).
 		%   
 		\item[Validierung] Abschliessend wird in der letzten Phase das Projektergebnis mit der Aufgabenstellung verglichen und ein Soll/Ist-Vergleich durchgeführt (\gls{ac:ap} \textsf{Soll/Ist Vergleich}).
 	\end{description}
@@ -85,7 +85,7 @@ In der letzten betrachteten Arbeit der Universität Coimbra in Portugal wurde das
 %
 %
 \subsubsection*{Zeitplan}
-	Aus den definierten \gls{ac:ap} wird ein entsprechender Zeitplan erstellt. Dabei wird der chronologische Ablauf des Ablaufplans eingehalten. Wie der Abbildung \vref{img:zeitplan} zu entnehmen ist, werden keine Bufferzeiten eingeplant. Dies weil die Projektdauer bezogen auf die Aufgabenstellung schon knapp ausfällt und daher jede Verzögerung den Erfolg des Projekts gefährden würde.
+	Aus den definierten \gls{ac:ap} wird ein entsprechender Zeitplan erstellt. Dabei wird der chronologische Ablauf des Ablaufplans eingehalten. Wie der Abbildung \vref{img:zeitplan} zu entnehmen ist, werden keine Bufferzeiten eingeplant. Dies, weil die Projektdauer, bezogen auf die Aufgabenstellung, schon knapp ausfällt und daher jede Verzögerung den Erfolg des Projekts gefährden würde.
 	%
 	\image{content/1_einleitung/image/zeitplan}{scale=1}{htbp}[Zeitplan][img:zeitplan] 
 %
@@ -93,22 +93,22 @@ In der letzten betrachteten Arbeit der Universität Coimbra in Portugal wurde das
 \subsubsection*{Meilensteine}
 	Jede Phase wird durch einen Meilenstein abgeschlossen. Die Erfüllung eines Meilensteins ist Voraussetzung für das Voranschreiten in die nächste Projektphase.
 	\begin{description}
-		\item[Wichtigste Methode evaluiert] Die Literaturstudie hat zum Ziel einen funktionierenden Ansatz für die spätere Konzeptentwicklung zu evaluieren. Dies muss am \textbf{04.06.2014} abgeschlossen werden.
+		\item[Wichtigste Methode evaluiert] Die Literaturstudie hat zum Ziel, einen funktionierenden Ansatz für die spätere Konzeptentwicklung zu evaluieren. Dies muss am \textbf{04.06.2014} abgeschlossen werden.
 		%
 		\item[Machbarkeit gewährleistet] Am Ende der Konzeptphase muss ein Algorithmus vorliegen, der die Machbarkeit des Projekts gewährleistet. Abgeschlossen ist dies am \textbf{11.06.2014}.
 		%
 		\item[Abschluss Implementation] Die Abschlussbedingung der Implementationsphase ist die fertige Umsetzung des Konzepts in \gls{g:labview}. Dies soll bis am \textbf{19.06.2014} erfolgen.
 		%
-		\item[Zusammenfassung] Abschliessend wird das gesamte Projekt einer Validierung unterzogen. Diese Phase ist am \textbf{26.06.2014} abgeschlossen.
+		\item[Zusammenfassung] Abschliessend wird das gesamte Projekt einer Validierung unterzogen. Diese Phase soll am \textbf{26.06.2014} abgeschlossen sein.
 		%
-		\item[Abgabe Thesis] Das Abgabedatum der Thesis ist auf den \textbf{30.06.2014} datiert.
+		\item[Abgabe Thesis] Abgabedatum der Thesis ist der \textbf{30.06.2014}.
 	\end{description}
 %
-Der Zeitplan konnte nicht eingehalten werden. Auf Abweichungen wird im Abschnitt \vref{sec:sollist} in Kapitel \vref{ch:validierung} eingegangen.
+Der Zeitplan konnte nicht eingehalten werden. Auf Abweichungen wird im Abschnitt \vref{sec:sollist} eingegangen.
 %
 %
 \subsection{Verwendete Software}
-	Während der Umsetzung des Projekts kommen folgende Software-Komponente eingesetzt:
+	Während der Umsetzung des Projekts werden folgende Software-Komponenten eingesetzt:
 	%
 	\begin{itemize}
 		\item \gls{g:matlab} 2012b
@@ -120,23 +120,23 @@ Der Zeitplan konnte nicht eingehalten werden. Auf Abweichungen wird im Abschnitt
 %
 % Anforderungen
 \section{Anforderungen}\label{s:anforderungen}
-	Da kein Pflichtenheft zu diesem Projekt existiert, wird folgend die Anforderungen an das Messprinzip definiert und erklärt.\par
+	Da kein Pflichtenheft zu diesem Projekt existiert, wird im Folgenden die Anforderungen an das Messprinzip definiert und erklärt.\par
 	%
 	\subsection{Messbereich}\label{ss:messbereich}
-		Ein Knie hat nur, gegeben durch das Kreuzband\footnote{für detaillierte Erläuterungen sei auf den Abschnitt \vref{s:funktion_kreuzband} verwiesen.}, einen beschränkten Bewegungsfreiraum. Diese Einschränkung erlaubt es den geforderten Messbereich zu beschränken und dadurch das Konzept stark zu vereinfachen. Als Ausgangslage für die Auslegung des nötigen Bereichs dienen Messungen\footnote{Die Messungen wurden mit Hilfe eines Massstabs durchgeführt und haben keinen Anspruch auf hohe Genauigkeit.} an einem realen Knie. Daraus ergeben sich folgende Fakten:
+		Das Kreuzband\footnote{für detaillierte Erläuterungen sei auf den Abschnitt \vref{s:funktion_kreuzband} verwiesen} engt den Bewegungsfreiraum des Knies ein. Diese Einschränkung erlaubt es, den geforderten Messbereich zu beschränken und dadurch das Konzept stark zu vereinfachen. Als Ausgangslage für die Auslegung des nötigen Bereichs dienen Messungen\footnote{Die Messungen wurden mit Hilfe eines Massstabs durchgeführt und haben keinen Anspruch auf hohe Genauigkeit} an einem realen Knie. Daraus ergeben sich folgende Fakten:
 		\begin{itemize}
-			\item Horizontale Auslenkungen y von $\pm$\unit[2.5]{cm}
-			\item Eine Auslenkung in x-Richtung von \unit[5]{mm}
-			\item Einen vertikalen Versatz z von bis zu \unit[7]{mm}
+			\item Horizontale Auslenkung y von $\pm$\unit[2.5]{cm}
+			\item Auslenkung in x-Richtung von $+$\unit[0.5]{cm}
+			\item Vertikaler Versatz z von bis zu $-$\unit[0.7]{cm}
 		\end{itemize}
-		Die drei Auslenkungen kombiniert ergeben einen kreisbogenförmigen Verlauf, der in der Abbildung \vref{img:knie_auslenkung} rot punktiert dargestellt ist. Dadurch, dass für eine Beurteilung des Heilprozesses des Kreuzbandes nur die seitliche Auslenkung y in der \gls{g:transversalebene} interessiert, kann der Bewegungsablauf auf eine horizontale Bewegung in der x-y-Ebene reduziert werden. Somit ergibt sich für das vorliegende Projekt ein 1-dimensionale Messung auf der y-Achse in einem Bereich von \unit[5]{cm}.
+		Die drei Auslenkungen kombiniert ergeben einen kreisbogenförmigen Verlauf, der in der Abbildung \vref{img:knie_auslenkung} rot punktiert dargestellt ist. Dadurch, dass für eine Beurteilung des Heilprozesses des Kreuzbandes nur die seitliche Auslenkung y in der \gls{g:transversalebene} interessiert, kann der Bewegungsablauf auf eine horizontale Bewegung in der x-y-Ebene reduziert werden. Somit ergibt sich für das vorliegende Projekt eine 1-dimensionale Messung auf der y-Achse in einem Bereich von \unit[5.0]{cm}.
 		\image{content/3_konzept/image/knie_bewegung}{scale=0.6}{htbp}[Auslenkung Knie][img:knie_auslenkung]
 	%
 	\subsection{Messgenauigkeit}\label{ss:messgenauigkeit}
-		Die Beurteilung des Zustandes der Knieverletzung erfolgt binär. Entweder das Knie ist geheilt und der Sportler kann das Training aufnehmen oder die Genesung ist noch nicht abgeschlossen. Daher muss die Genauigkeit lediglich ausreichen um eine Extraktion dieser beiden Fälle zu ermöglichen. Die Genauigkeit wird auf Grund dieser Fakten auf $\pm$ \unit[1]{cm} festgelegt\footnote{Dieser Wert ist eine Annahme und müsste durch eine Fachperson bestätigt werden.}.
+		Die Beurteilung des Zustandes der Knieverletzung erfolgt binär. Entweder das Knie ist geheilt und der Sportler kann das Training aufnehmen, oder die Genesung ist noch nicht abgeschlossen. Daher muss die Genauigkeit lediglich ausreichen, um eine Extraktion dieser beiden Fälle zu ermöglichen. Die Genauigkeit wird auf Grund dieser Fakten auf $\pm$ \unit[1.0]{cm} festgelegt\footnote{Dieser Wert ist eine Annahme und müsste durch eine Fachperson bestätigt werden}.
 %
 %
 \section{Angrenzende Projekte}
-Dieses Projekt dient als Grundstein respektive Vorstudie für ein weiterführendes Projekt mit der \acrfull{ac:EHSM}. Im weiterführenden Projekt soll ein Produkt mit den in Abschnitt \vref{sec:zweck} beschriebenem Ziel entwickelt werden. In dieser hier vorliegenden Arbeit besteht noch keine Zusammenarbeit mit Magglingen. 				
+Dieses Projekt dient als Grundstein respektive Vorstudie für ein weiterführendes Projekt mit der \acrfull{ac:EHSM}. Im weiterführenden Projekt soll ein Produkt mit dem in Abschnitt \vref{sec:zweck} beschriebenen Ziel entwickelt werden. In der vorliegenden Arbeit besteht noch keine Zusammenarbeit mit Magglingen. 				
 	
 
